--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -5,11 +5,74 @@
     android:layout_height="match_parent"
     tools:context="com.janeproject.refurbishedapplechecker.Fragment.TopFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@color/black"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <include layout="@layout/parts_button"
+                    android:id="@+id/ipod_touch_button"/>
+
+                <FrameLayout
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"/>
+
+                <include layout="@layout/parts_button"
+                    android:id="@+id/ipad_button"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <include layout="@layout/parts_button"
+                    android:id="@+id/mac_button"/>
+
+                <FrameLayout
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"/>
+
+                <include layout="@layout/parts_button"
+                    android:id="@+id/clearance_button"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/iphone_row"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <include layout="@layout/parts_button"
+                    android:id="@+id/iphone_button"/>
+
+                <FrameLayout
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"/>
+
+                <include layout="@layout/parts_button"
+                    android:id="@+id/clearance_button"
+                    android:visibility="invisible"/>
+
+            </LinearLayout>
+
+
+
+        </LinearLayout>
+
+    </ScrollView>
 </FrameLayout>
