--- a/app/src/main/res/layout/parts_button.xml
+++ b/app/src/main/res/layout/parts_button.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/square_frame">
+    android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/buttonImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
             android:padding="32dp"
             android:scaleType="fitCenter"
