--- a/app/src/main/res/layout/parts_button.xml
+++ b/app/src/main/res/layout/parts_button.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:layout_gravity="center_horizontal">
 
         <ImageView
             android:id="@+id/buttonImage"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
-            android:padding="32dp"
+            android:padding="16dp"
             android:scaleType="fitCenter"
             android:adjustViewBounds="true"
             android:src="@drawable/ipad" />
@@ -20,8 +25,6 @@
             android:layout_gravity="center_horizontal"
             android:text="@string/ipad"
             android:textSize="20sp"
-            android:textColor="@color/black"
-            android:layout_alignBottom="@+id/buttonImage"
-            android:layout_centerHorizontal="true" />
+            android:textColor="@color/black" />
 
-</RelativeLayout>
+</LinearLayout>
