--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,65 +1,98 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.janeproject.refurbishedapplechecker.Fragment.AboutFragment">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/toolbarTheme"
-        android:visibility="visible"
-        app:popupTheme="@style/Theme.AppCompat.Light"/>
+        android:padding="20dp"
+        android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/version"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
-
-        <TextView
-            android:id="@+id/about_text"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="32dp"
-            android:textColor="@color/black"
-            android:layout_below="@+id/version"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_below="@+id/about_text"
-            android:layout_centerHorizontal="true">
+            android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/github_button"
+                android:id="@+id/icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:contentDescription="@string/github"/>
+                android:elevation="4dp"
+                android:src="@mipmap/ic_launcher"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" />
 
-            <ImageView
-                android:id="@+id/googleplay_button"
+            <TextView
+                android:id="@+id/version"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
+                android:gravity="center"
+                android:padding="20dp"
+                android:layout_below="@id/icon"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:id="@+id/credit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/credit"
+                android:textIsSelectable="true"
+                android:textColor="@color/black"
+                android:layout_below="@+id/version"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:id="@+id/about_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:contentDescription="@string/google_play" />
+                android:text="@string/about"
+                android:textColor="@color/black"
+                android:layout_below="@+id/credit_text"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_below="@+id/about_text"
+                android:layout_centerHorizontal="true">
 
-    </RelativeLayout>
+                <ImageView
+                    android:id="@+id/github_button"
+                    android:layout_height="50dp"
+                    android:layout_width="0dp"
+                    android:layout_margin="16dp"
+                    android:layout_weight="0.5"
+                    android:src="@drawable/github_mark"
+                    android:background="?attr/selectableItemBackground"
+                    android:contentDescription="@string/github"/>
 
-</LinearLayout>
+                <ImageView
+                    android:id="@+id/googleplay_button"
+                    android:layout_height="50dp"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:layout_margin="16dp"
+                    android:src="@drawable/google_play_badge"
+                    android:background="?attr/selectableItemBackground"
+                    android:contentDescription="@string/google_play" />
+
+            </LinearLayout>
+        </RelativeLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:textSize="12sp"
+            android:text="@string/syouhyou"/>
+    </LinearLayout>
+</ScrollView>
